--- a/knock_knock_frontend/docker/development/Dockerfile
+++ b/knock_knock_frontend/docker/development/Dockerfile
@@ -8,7 +8,7 @@ RUN adduser -u $CUID -S nodeuser -G nodeuser
 
 WORKDIR /home/nodeuser/app
 
-RUN mkdir /home/nodeuser/app/node_modules/.cache
+RUN mkdir -p /home/nodeuser/app/node_modules/.cache
 
 COPY ./package*.json ./
 
