--- a/knock_knock_frontend/docker/development/Dockerfile
+++ b/knock_knock_frontend/docker/development/Dockerfile
@@ -12,7 +12,7 @@ RUN mkdir -p /home/nodeuser/app/node_modules/.cache
 
 COPY ./package*.json ./
 
-RUN yarn install
+RUN yarn install -g --unsafe-perm=true --allow-root  
 
 COPY . .
 
