--- a/knock_knock_frontend/docker/development/Dockerfile
+++ b/knock_knock_frontend/docker/development/Dockerfile
@@ -8,11 +8,11 @@ RUN adduser -u $CUID -S nodeuser -G nodeuser
 
 WORKDIR /home/nodeuser/app
 
-RUN mkdir -p /home/nodeuser/app/node_modules/.cache
+RUN mkdir -p /node_modules/.cache
 
 COPY ./package*.json ./
 
-RUN yarn install -g --unsafe-perm=true --allow-root  
+RUN yarn install
 
 COPY . .
 
